--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,10 @@
 # List the start up tasks. Learn more: https://www.gitpod.io/docs/configure/workspaces/tasks
 tasks:
+  #random utilities
+  -  name: utils
+     before:
+        sudo apt-get install tree
+
   - name: AWS cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
