--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,20 @@ tasks:
   -  name: utils
      before:
         sudo apt-get install tree
-
+  -  name: powershell
+  #https://learn.microsoft.com/en-us/powershell/scripting/install/install-ubuntu?view=powershell-7.5
+  #https://docs.aws.amazon.com/powershell/v4/userguide/pstools-getting-set-up-linux-mac.html
+  #https://docs.aws.amazon.com/powershell/v4/reference/
+     before: |
+      sudo apt-get update
+      sudo apt-get install -y wget apt-transport-https software-properties-common
+      source /etc/os-release
+      wget -q https://packages.microsoft.com/config/ubuntu/$VERSION_ID/packages-microsoft-prod.deb
+      sudo dpkg -i packages-microsoft-prod.deb
+      rm packages-microsoft-prod.deb
+      sudo apt-get update
+      sudo apt-get install -y powershell
+      pwsh
   - name: AWS cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
